--- a/src/test/resources/email.properties
+++ b/src/test/resources/email.properties
@@ -1,4 +1,4 @@
 #valid email
-emailRecipient=ittest2@i.ua
+emailRecipient=igotop3054@i.ua
 emailSubject=testIraTopolSubject
 emailBody=testIraTopolBody
