--- a/src/test/resources/user.properties
+++ b/src/test/resources/user.properties
@@ -1,4 +1,4 @@
 #valid user
-userName=ittest2
-password=337774a
-email=ittest2@i.ua
+userName=igotop3054
+password=!1Qwertyuiop
+email=igotop3054@i.ua
